# jigsaw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Packages  README.md  Release  jigsaw_0.1.0-1_amd64.deb
.github/workflows/: deploy.yml
benches/: core_bench.rs
debian/: changelog  control  copyright  jigsaw.1  jigsaw.manpages  rules
docs/: index.html
src/: lib.rs  main.rs
src/api/: server.rs
src/cli/: args.rs
src/engine/: markov.rs  mask.rs  memorable.rs  mod.rs  personal.rs  rules.rs
src/interactive/: mod.rs
src/io/: writer.rs
tests/: api_test.sh  mask_tests.rs
