[package]
name = "jigsaw"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["Rupam Ghosh"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
dialoguer = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-cors = "0.7"
env_logger = "0.10"

[dev-dependencies]
criterion = "0.8.2"

[lib]
name = "jigsaw"
path = "src/lib.rs"

[[bench]]
name = "core_bench"
harness = false
