[package]
name = "jigsaw"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Rupam Ghosh <hulo@hulo.codes>"]
description = "Joint Intelligence Generator for Strategic Attack Wordlists"
homepage = "https://github.com/hul0/jigsaw"
repository = "https://github.com/hul0/jigsaw"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
dialoguer = "0.12.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
actix-web = "4.12.1"
actix-cors = "0.7.1"
env_logger = "0.11.9"

[dev-dependencies]
criterion = "0.8.2"

[lib]
name = "jigsaw"
path = "src/lib.rs"

[[bench]]
name = "core_bench"
harness = false
